syntax = "proto3";
package orderbook;


service OrderbookAggregator {
  rpc BookSummary(Empty) returns (stream Summary);
  rpc GetMySummary(Empty) returns (MySummaryResponse);
  rpc UpdateOrder(Level) returns (Level);
}

message Empty {}


message Summary {
  double spread = 1;
  repeated Level bids = 2;
  repeated Level asks = 3;
}

message Level {
  string exchange = 1;
  double price = 2;
  double amount = 3;
}

message MySummaryResponse {
  string summaries = 1;
}
